--- a/css/style.css
+++ b/css/style.css
@@ -197,9 +197,12 @@ img {
   background-image: url("../img/slider-3.png");
 }
 
+.main-header-logo {
+  margin-top: 9px;
+  margin-left: 27px;
+}
 
 
-/* -------------------навигация по шапке---------------------- */
 .btn-basket-text-full {
   font-weight: 500;
   font-size: 14px;
@@ -234,8 +237,8 @@ img {
 
 .site-navigation {
   display: flex;
-  margin: 0;
-  margin-right: 70px;
+  margin-top: 21px;
+  margin-right: 260px;
   padding: 0;
 
   color: #ffffff;
@@ -325,6 +328,7 @@ img {
   display: block;
 
   background-color: #f8f7f4;
+  border-radius: 5px;
 }
 
 .site-navigation-list a,
@@ -338,6 +342,8 @@ img {
   line-height: 16px;
   text-align: start;
   color: #000000;
+
+  border-radius: 5px;
 }
 .site-navigation-list-item b::after,
 .site-navigation-submenu-item b::after {
@@ -346,7 +352,7 @@ img {
   bottom: 0;
   left: 6px;
 
-  width: calc(100% - 12px);
+  width: 90% ;
   height: 1px;
 
   background-color: #d1d0ce;
@@ -376,7 +382,7 @@ img {
 .site-navigation li {
   z-index: 1;
 
-  margin-right: 26px;
+  margin-right: 27px;
 
   list-style: none;
   line-height: 18px;
@@ -396,10 +402,21 @@ img {
 
 
 .user-navigation-input {
-  /* display: none; */
+  display: none;
 }
 
+.user-navigation {
+  display: flex;
+  align-items: center;
+  margin-top: 21px;
+  margin-right: 10px;
+  padding: 0;
 
+  list-style: none;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+}
 
 
 
@@ -443,7 +460,9 @@ fieldset {
   text-decoration: none;
 }
 .opening-hours {
-  margin-top: 30px;
+  display: block;
+  margin-top: 22px;
+  margin-right: 25px;
   margin-bottom: 5px;
 
   font-weight: 700;
@@ -452,6 +471,8 @@ fieldset {
 }
 
 .phone-number {
+  margin-right: 28px;
+
   font-weight: 700;
   font-size: 22px;
   line-height: 24px;
@@ -481,7 +502,9 @@ fieldset {
 
   display: inline-block;
   width: 267px;
-  margin-bottom: 20px;
+  margin-top: -4px;
+  margin-right: 10px;
+  margin-left: 6px;
 
   list-style: none;
   vertical-align: top;
@@ -497,6 +520,8 @@ fieldset {
 .offers-item:hover:before,
 .offers-item:hover:after {
   display: block;
+
+  cursor: pointer;
 }
 .offers-item:hover .button-wrapper {
   z-index: 15;
@@ -540,7 +565,6 @@ fieldset {
 
   display: none;
 
-  background-color: #9bafa3;
   border-radius: 3px;
   opacity: 0.3;
 }
@@ -590,7 +614,6 @@ fieldset {
 
   display: inline-block;
   width: 250px;
-  /* margin-top: 10px; */
 
   font-weight: 500;
   font-size: 16px;
@@ -670,8 +693,8 @@ fieldset {
 
   display: flex;
   flex-direction: column;
-  min-width: 560px;
-  min-height: 230px;
+  box-sizing: border-box;
+  width: 560px;
   margin-right: 13px;
 
   background-color: #a03472;
@@ -686,8 +709,8 @@ fieldset {
 
   display: flex;
   flex-direction: column;
-  min-width: 560px;
-  min-width: 560px;
+  box-sizing: border-box;
+  width: 560px;
   min-height: 230px;
   margin-left: 13px;
 
@@ -700,6 +723,8 @@ fieldset {
 
 .offers-item img {
   position: relative;
+
+  margin-top: -5px;
 
   border-radius: 50%;
 }
@@ -725,27 +750,6 @@ fieldset {
   box-shadow: 0 2px 2px 0 rgba(172, 16, 0, 0.64);
   cursor: pointer;
 }
-
-
-
-/* ??????????????КАРТОЧКИ?????????????? */
-
-/* .offers-item:hover::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  right: -13px;
-  bottom: -72px;
-  left: -13px;
-  z-index: 1;
-
-  background-color: rgba(255, 255, 255, 0.2);
-  border-radius: 5px;
-  box-shadow: 0 20px 20px rgba(0, 0, 0, 0.4);
-
-  pointer-events: none;
-} */
-
 
 
 
@@ -863,7 +867,7 @@ fieldset {
 
 .news {
   box-sizing: border-box;
-  min-width: 560px;
+  width: 560px;
   margin-right: 13px;
   padding: 20px;
 
@@ -878,7 +882,7 @@ fieldset {
 
 .subscription-form {
   box-sizing: border-box;
-  min-width: 560px;
+  width: 560px;
   margin-left: 13px;
   padding: 20px;
 
@@ -1033,7 +1037,7 @@ fieldset {
   flex-direction: row-reverse;
   box-sizing: border-box;
   width: 100px;
-  padding: 10px 20px;
+  padding: 5px 5px;
 
   color: #ffffff;
 
@@ -1182,6 +1186,8 @@ fieldset {
   padding: 20px;
 
   list-style: none;
+
+  border-bottom: 1px solid #9db1a5;
 }
 
 .pagination a {
@@ -1265,9 +1271,6 @@ fieldset {
   line-height: 41px;
 }
 
-.filters {
-  width: 863px;
-}
 
 fieldset:nth-child(1),
 fieldset:nth-child(2),
@@ -1292,6 +1295,7 @@ fieldset:nth-child(4) {
 
 .filter-btn {
   width: 150px;
+  height: 38px;
 
   font-weight: 500;
   font-size: 16px;
@@ -1327,21 +1331,8 @@ fieldset:nth-child(4) {
   justify-content: space-between;
   width: 1200px;
   margin: 0 auto;
-
-  outline: 1px solid red;
 }
 
-
-
-.user-navigation {
-  display: flex;
-  align-items: center;
-  margin: 0;
-  margin-left: auto;
-  padding: 0;
-
-  outline: 1px solid greenyellow;
-}
 
 .user-navigation-item {
   display: flex;
@@ -1349,18 +1340,14 @@ fieldset:nth-child(4) {
 
 .deals {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   margin-bottom: 40px;
-
-  outline: 1px solid #ff4500;
 }
 
 .hits-list {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   padding: 0;
-
-  outline: 1px solid #0000ff;
 }
 
 .offers-list {
@@ -1371,8 +1358,6 @@ fieldset:nth-child(4) {
   margin: 0;
   margin-top: 38px;
   padding: 0;
-
-  outline: 1px solid #0000ff;
 }
 
 
@@ -1381,8 +1366,6 @@ fieldset:nth-child(4) {
 .blog-news-wrapper {
   display: flex;
   margin: 42px auto;
-
-  outline: 1px solid #a03472;
 }
 
 .main-footer {
@@ -1391,15 +1374,11 @@ fieldset:nth-child(4) {
   align-items: center;
   width: 1200px;
   margin: 0 auto;
-
-  outline: 1px solid greenyellow;
 }
 
 .map {
   width: 100%;
   height: 100%;
-
-  outline: 1px solid #ffe4c4;
 }
 
 .filter {
@@ -1559,15 +1538,140 @@ fieldset:nth-child(4) {
 
 .select-container {
   position: relative;
+
   width: 221px;
   height: 36px;
   /* margin-bottom: 20px; */
   margin-right: 10px;
+  /* font-size: 0; */
 
-  font-size: 0;
+  background-color: #9db1a5;
+  border-radius: 20px;
+}
+
+.topping-wrapper {
+  position: relative;
+
+  margin: 5px 15px 0 0;
+  padding: 1px 0 2px 49px;
+
+  font-weight: 500;
+  line-height: 36px;
+  font-family: inherit;
+  color: #ffffff;
 
   background-color: #9db1a5;
   border-radius: 20px;
 }
 
 
+.topping-wrapper label {
+  position: relative;
+
+  display: inline-block;
+  margin-top: 5px;
+  margin-right: 55px;
+  padding-top: 0;
+}
+
+.toggle + .filter-lbl::before {
+  content: "";
+  position: absolute;
+  top: -1px;
+  left: -30px;
+
+  display: inline-block;
+  width: 22px;
+  height: 22px;
+
+  vertical-align: baseline;
+
+  background-image: url(../img/checkbox-off.svg);
+  background-repeat: no-repeat;
+  background-size: 22px 22px;
+  cursor: pointer;
+  opacity: 0.8;
+}
+.toggle + .filter-lbl:hover::before {
+  opacity: 1;
+}
+.toggle:checked + .filter-lbl::before {
+  background-image: url("../img/checkbox-on.svg");
+  background-size: 24px 22px;
+}
+
+
+.fat-wrapper {
+  position: relative;
+
+  margin: 5px 15px 0 0;
+  padding: 1px 0 2px 49px;
+
+  font-weight: 500;
+  line-height: 36px;
+  font-family: inherit;
+  color: #ffffff;
+
+  background-color: #9db1a5;
+  border-radius: 20px;
+}
+
+
+.filter-fat {
+  position: relative;
+
+  margin-top: 5px;
+  margin-right: 50px;
+  padding-top: 0;
+}
+
+.fat-select + .filter-fat::before {
+  content: "";
+  position: absolute;
+  top: -2px;
+  left: -30px;
+
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+
+  vertical-align: baseline;
+
+  background-image: url("../img/radio-off.svg");
+  background-repeat: no-repeat;
+  background-size: 24px 24px;
+  cursor: pointer;
+  opacity: 0.8;
+}
+
+.fat-select + .filter-fat:hover::before {
+  opacity: 1;
+}
+
+.fat-select:checked + .filter-fat::before {
+  background-image: url("../img/radio-on.svg");
+  background-size: 24px 24px;
+}
+
+.category-filters {
+  box-sizing: border-box;
+  min-width: 193px;
+  min-height: 36px;
+  padding: 0 16px;
+
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 18px;
+  color: #ffffff;
+
+  background-color: transparent;
+  background-image: url("../img/select-arrow.svg");
+  background-repeat: no-repeat;
+  border: none;
+  border-radius: 20px;
+  outline: none;
+  cursor: pointer;
+}
+.category-filters:hover {
+  color: #000000;
+}
