--- a/css/style.css
+++ b/css/style.css
@@ -845,7 +845,8 @@ fieldset {
 }
 
 .distrib {
-  padding: 10px 18px;
+  margin: 0;
+  padding: 0;
 
   font-weight: 500;
   font-size: 16px;
@@ -883,8 +884,9 @@ fieldset {
 .subscription-form {
   box-sizing: border-box;
   width: 560px;
-  margin-left: 13px;
-  padding: 20px;
+  margin-right: 27px;
+  margin-left: 30px;
+  padding: 7px;
 
   color: #000000;
 
